--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,4 +211,6 @@ if(NOT MSVC)
   set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${DREAM3DProj_BINARY_DIR}/Bin  )
 endif()
 
-
+if(${DREAM3D_BUILD_TESTING})
+  ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Test ${PROJECT_BINARY_DIR}/Test)
+endif()
