Adding cmake code to generate a version string inside a XXXVersion.h/cpp files. The plugins use this version instead of DREAM3D version.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,15 @@ if(NOT Qt5Core_FOUND)
 endif()
 
 
+set(CMP_TOP_HEADER_FILE "${PLUGIN_NAME}Plugin.h")
+set(CMP_VERSION_HEADER_FILE_NAME "${PLUGIN_NAME}Version.h")
+cmpVersionStringsFromGit( GENERATED_HEADER_FILE_PATH "${${PLUGIN_NAME}_BINARY_DIR}/${PLUGIN_NAME}Version.h"
+                          GENERATED_SOURCE_FILE_PATH "${${PLUGIN_NAME}_BINARY_DIR}/${PLUGIN_NAME}Version.cpp"
+                          NAMESPACE "${PLUGIN_NAME}"
+                          cmpProjectName "${PLUGIN_NAME}"
+                          PROJECT_SOURCE_DIR ${${PLUGIN_NAME}_SOURCE_DIR}
+                          PROJECT_VERSION_MAJOR  "1.0"
+                          EXPORT_MACRO "")
 
 set(${PLUGIN_NAME}_Project_SRCS "")
 
@@ -138,6 +147,8 @@ set(${PLUGIN_NAME}_GEN_HDRS
    ${RegisterKnownFiltersFile}
    ${AllFilterParameterWidgetsHeaderFile}
    ${RegisterKnownFilterParameterWidgetsFile}
+  "${${PLUGIN_NAME}_BINARY_DIR}/${PLUGIN_NAME}Version.h"
+  "${${PLUGIN_NAME}_BINARY_DIR}/${PLUGIN_NAME}Version.cpp"
 )
 
 # --------------------------------------------------------------------
