Updating plugin with latest reorganization of the repositories for SIMP/SIMPLView breakout.

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -11,12 +11,16 @@
 # project(DDDAnalysisToolboxTest)
 set(${PLUGIN_NAME}Test_SOURCE_DIR ${${PLUGIN_NAME}_SOURCE_DIR}/Test)
 set(${PLUGIN_NAME}Test_BINARY_DIR ${${PLUGIN_NAME}_BINARY_DIR}/Test)
-include(${DREAM3DProj_SOURCE_DIR}/Test/DREAM3DTestFunctions.cmake)
+
+#------------------------------------------------------------------------------
+# Include this file from the SIMPL Project
+include(${SIMPLProj_SOURCE_DIR}/Test/SIMPLTestFunctions.cmake)
 
 
 include_directories(${${PLUGIN_NAME}_SOURCE_DIR})
 include_directories(${${PLUGIN_NAME}_BINARY_DIR})
-
+include_directories(${SIMPLProj_SOURCE_DIR}/Source)
+include_directories(${SIMPLProj_BINARY_DIR})
 
 set(TEST_TEMP_DIR ${${PLUGIN_NAME}Test_BINARY_DIR}/Temp)
 # Make sure the directory is created during CMake time
@@ -31,7 +35,7 @@ configure_file(${${PLUGIN_NAME}_SOURCE_DIR}/Test/TestFileLocations.h.in
 # This is an example of creating a simple unit test. Make the test name unique enough that
 # another plugin would not have the same name as your test. Possible prefix the name of the
 # test and/or the name of the plugin
-# AddDREAM3DUnitTest(TESTNAME SomeTest 
+# AddSIMPLUnitTest(TESTNAME SomeTest 
 #                   SOURCES ${${PLUGIN_NAME}_SOURCE_DIR}/Test/SomeTest.cpp 
 #                   LINK_LIBRARIES Qt5::Core H5Support DREAM3DLib)
 
